Trying to fix overflow on mobile :sparkles::rainbow::sparkles:

--- a/styles/style.css
+++ b/styles/style.css
@@ -235,7 +235,7 @@ html {
   overflow: hidden;
 }
 
-body {
+body, html {
   overflow-x: hidden;
 }
 
